--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9cff665",
+   "id": "b76f0cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_fte_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Filter only Billed rows (case-insensitive)\n",
+    "    billed_df = df[df['Category for Static'].str.lower() == 'billed'].copy()\n",
+    "\n",
+    "    # Calculate Total FTE per AID\n",
+    "    total_fte_by_aid = billed_df.groupby('AID')['No. of FTE'].sum()\n",
+    "    billed_df['Total FTE'] = billed_df['AID'].map(total_fte_by_aid)\n",
+    "\n",
+    "    # Calculate Sum of % = (No. of FTE / Total FTE) * 100\n",
+    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
+    "\n",
+    "    # Round and adjust % so sum is exactly 100 per AID\n",
+    "    def adjust_percentage(group):\n",
+    "        group['Sum of %'] = group['Sum of %'].round(2)\n",
+    "        total = group['Sum of %'].sum()\n",
+    "        diff = round(100.00 - total, 2)\n",
+    "\n",
+    "        if abs(diff) > 0:  # Only adjust if needed\n",
+    "            # Adjust the last row in the group\n",
+    "            group.iloc[-1, group.columns.get_loc('Sum of %')] += diff\n",
+    "\n",
+    "        return group\n",
+    "\n",
+    "    billed_df = billed_df.groupby('AID', group_keys=False).apply(adjust_percentage)\n",
+    "\n",
+    "    return billed_df\n",
+    "\n",
+    "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    billed_df = calculate_fte_summary(df)\n",
+    "\n",
+    "    # Only fill missing in other fields (not BP CC1 or BP CC2)\n",
+    "    columns_to_fill = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Billing Contact PS ID'\n",
+    "    ]\n",
+    "    billed_df[columns_to_fill] = billed_df[columns_to_fill].fillna(\"Missing\")\n",
+    "\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Billing Contact PS ID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "\n",
+    "    summary_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
+    "        'No. of FTE': 'sum',\n",
+    "        'Sum of %': 'sum'\n",
+    "    })\n",
+    "\n",
+    "    summary_df['Sum of %'] = summary_df['Sum of %'].round(2)\n",
+    "    summary_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
+    "\n",
+    "    return summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b105e0b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea960397",
+   "id": "3028dfd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bcb62c",
+   "id": "8fa1e71e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a0858ea",
+   "id": "2a2dc420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a36b20",
+   "id": "ee653609",
    "metadata": {},
    "outputs": [],
    "source": [
