--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b76f0cd6",
+   "id": "6a92352f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def flag_duplicate_billing_names(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Ensure required columns exist\n",
+    "    name_col = 'Billing Contact Name'\n",
+    "    psid_col = 'Billing Contact PS ID'\n",
+    "    comment_col = 'Comment'\n",
+    "\n",
+    "    if name_col not in df.columns or psid_col not in df.columns:\n",
+    "        raise KeyError(\"Missing required columns in the dataframe.\")\n",
+    "\n",
+    "    # Ensure 'Comment' column exists\n",
+    "    if comment_col not in df.columns:\n",
+    "        df[comment_col] = \"\"\n",
+    "\n",
+    "    # --------- Case 1: Multiple Names for Same PS ID ---------\n",
+    "    psid_grouped = df.groupby(psid_col)[name_col].unique().reset_index()\n",
+    "\n",
+    "    for _, row in psid_grouped.iterrows():\n",
+    "        psid = row[psid_col]\n",
+    "        names = row[name_col]\n",
+    "\n",
+    "        if len(names) <= 1:\n",
+    "            continue  # Only one name, no duplicates\n",
+    "\n",
+    "        name_names = [n for n in names if '@' not in str(n)]\n",
+    "        email_names = [n for n in names if '@' in str(n)]\n",
+    "\n",
+    "        match_found = False\n",
+    "\n",
+    "        for name in name_names:\n",
+    "            name_words = str(name).lower().split()\n",
+    "            for email in email_names:\n",
+    "                email_lower = str(email).lower()\n",
+    "                if any(word in email_lower for word in name_words):\n",
+    "                    match_found = True\n",
+    "                    idxs = df[(df[psid_col] == psid) & (df[name_col].isin([name, email]))].index\n",
+    "                    for idx in idxs:\n",
+    "                        old_comment = str(df.at[idx, comment_col])\n",
+    "                        new_comment = 'Duplicate name against same PS ID, might be same person.'\n",
+    "                        if new_comment not in old_comment:\n",
+    "                            updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                            df.at[idx, comment_col] = updated_comment\n",
+    "\n",
+    "        if not match_found:\n",
+    "            # Add comment for all rows with this PS ID\n",
+    "            idxs = df[df[psid_col] == psid].index\n",
+    "            for idx in idxs:\n",
+    "                old_comment = str(df.at[idx, comment_col])\n",
+    "                new_comment = 'Same BC PS ID found against multiple BC names – unlikely to be same person.'\n",
+    "                if new_comment not in old_comment:\n",
+    "                    updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                    df.at[idx, comment_col] = updated_comment\n",
+    "\n",
+    "    # --------- Case 2: Multiple PS IDs for Same Name ---------\n",
+    "    name_grouped = df.groupby(name_col)[psid_col].nunique().reset_index()\n",
+    "    multi_psid_names = name_grouped[name_grouped[psid_col] > 1][name_col]\n",
+    "\n",
+    "    for name in multi_psid_names:\n",
+    "        idxs = df[df[name_col] == name].index\n",
+    "        for idx in idxs:\n",
+    "            old_comment = str(df.at[idx, comment_col])\n",
+    "            new_comment = 'Same contact name appears with multiple PS IDs.'\n",
+    "            if new_comment not in old_comment:\n",
+    "                updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                df.at[idx, comment_col] = updated_comment\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dddf994f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b105e0b1",
+   "id": "920546bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3028dfd6",
+   "id": "e3e57c15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fa1e71e",
+   "id": "bf408c4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a2dc420",
+   "id": "c27e4848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee653609",
+   "id": "5aa4a1d8",
    "metadata": {},
    "outputs": [],
    "source": [
