--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a008084",
+   "id": "324ba2d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,29 @@
     "        psid = row[psid_col]\n",
     "        names = row[name_col]\n",
     "\n",
+    "        ###########\n",
+    "                # Skip if only one unique name\n",
+    "        if len(names) <= 1:\n",
+    "            continue\n",
+    "\n",
+    "        # Normalize all names (lowercased, stripped)\n",
+    "        normalized_names = [str(n).strip().lower() for n in names]\n",
+    "\n",
+    "        # If all normalized names are identical, skip\n",
+    "        if all(n == normalized_names[0] for n in normalized_names):\n",
+    "            continue\n",
+    "\n",
+    "        # Else, flag unrelated names for same PS ID\n",
+    "        idxs = df[df[psid_col] == psid].index\n",
+    "        for idx in idxs:\n",
+    "            old_comment = str(df.at[idx, comment_col])\n",
+    "            new_comment = 'Same PS ID has unrelated names (likely different people).'\n",
+    "            if new_comment not in old_comment:\n",
+    "                updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                df.at[idx, comment_col] = updated_comment\n",
+    "\n",
+    "        #########\n",
+    "        \n",
     "        name_names = [n for n in names if '@' not in str(n)]\n",
     "        email_names = [n for n in names if '@' in str(n)]\n",
     "\n",
