--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324ba2d9",
+   "id": "e58e9250",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "def flag_duplicate_billing_names(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Ensure required columns exist\n",
     "    name_col = 'Billing Contact Name'\n",
     "    psid_col = 'Billing Contact PS ID'\n",
     "    comment_col = 'Comment'\n",
@@ -17,6 +18,7 @@
     "    if name_col not in df.columns or psid_col not in df.columns:\n",
     "        raise KeyError(\"Missing required columns in the dataframe.\")\n",
     "\n",
+    "    # Ensure 'Comment' column exists\n",
     "    if comment_col not in df.columns:\n",
     "        df[comment_col] = \"\"\n",
     "\n",
@@ -27,57 +29,41 @@
     "        psid = row[psid_col]\n",
     "        names = row[name_col]\n",
     "\n",
-    "        ###########\n",
-    "                # Skip if only one unique name\n",
     "        if len(names) <= 1:\n",
     "            continue\n",
     "\n",
-    "        # Normalize all names (lowercased, stripped)\n",
     "        normalized_names = [str(n).strip().lower() for n in names]\n",
     "\n",
-    "        # If all normalized names are identical, skip\n",
     "        if all(n == normalized_names[0] for n in normalized_names):\n",
-    "            continue\n",
+    "            continue  # All names are same after normalization\n",
     "\n",
-    "        # Else, flag unrelated names for same PS ID\n",
-    "        idxs = df[df[psid_col] == psid].index\n",
-    "        for idx in idxs:\n",
-    "            old_comment = str(df.at[idx, comment_col])\n",
-    "            new_comment = 'Same PS ID has unrelated names (likely different people).'\n",
-    "            if new_comment not in old_comment:\n",
-    "                updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
-    "                df.at[idx, comment_col] = updated_comment\n",
-    "\n",
-    "        #########\n",
-    "        \n",
     "        name_names = [n for n in names if '@' not in str(n)]\n",
     "        email_names = [n for n in names if '@' in str(n)]\n",
     "\n",
-    "        matched = False\n",
+    "        is_likely_same_person = False\n",
     "\n",
     "        for name in name_names:\n",
     "            name_words = str(name).lower().split()\n",
     "            for email in email_names:\n",
     "                email_lower = str(email).lower()\n",
     "                if any(word in email_lower for word in name_words):\n",
-    "                    idxs = df[(df[psid_col] == psid) & (df[name_col].isin([name, email]))].index\n",
-    "                    for idx in idxs:\n",
-    "                        old_comment = str(df.at[idx, comment_col])\n",
-    "                        new_comment = 'Duplicate name against same PS ID, might be same person.'\n",
-    "                        if new_comment not in old_comment:\n",
-    "                            updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
-    "                            df.at[idx, comment_col] = updated_comment\n",
-    "                    matched = True\n",
+    "                    is_likely_same_person = True\n",
+    "                    break\n",
+    "            if is_likely_same_person:\n",
+    "                break\n",
     "\n",
-    "        # If no match between names and emails, flag as likely different\n",
-    "        if not matched and len(names) > 1:\n",
-    "            idxs = df[df[psid_col] == psid].index\n",
-    "            for idx in idxs:\n",
-    "                old_comment = str(df.at[idx, comment_col])\n",
-    "                new_comment = 'Likely different people – same PS ID has unrelated names.'\n",
-    "                if new_comment not in old_comment:\n",
-    "                    updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
-    "                    df.at[idx, comment_col] = updated_comment\n",
+    "        # Decide the final comment\n",
+    "        if is_likely_same_person:\n",
+    "            final_comment = 'Duplicate name against same PS ID, might be same person.'\n",
+    "        else:\n",
+    "            final_comment = 'Same PS ID has unrelated names (likely different people).'\n",
+    "\n",
+    "        # Apply comment (replace or append)\n",
+    "        idxs = df[df[psid_col] == psid].index\n",
+    "        for idx in idxs:\n",
+    "            existing = str(df.at[idx, comment_col])\n",
+    "            if final_comment not in existing:\n",
+    "                df.at[idx, comment_col] = final_comment\n",
     "\n",
     "    # --------- Case 2: Multiple PS IDs for Same Name ---------\n",
     "    name_grouped = df.groupby(name_col)[psid_col].nunique().reset_index()\n",
@@ -86,11 +72,9 @@
     "    for name in multi_psid_names:\n",
     "        idxs = df[df[name_col] == name].index\n",
     "        for idx in idxs:\n",
-    "            old_comment = str(df.at[idx, comment_col])\n",
-    "            new_comment = 'Same contact name appears with multiple PS IDs.'\n",
-    "            if new_comment not in old_comment:\n",
-    "                updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
-    "                df.at[idx, comment_col] = updated_comment\n",
+    "            existing = str(df.at[idx, comment_col])\n",
+    "            if 'Same contact name appears with multiple PS IDs.' not in existing:\n",
+    "                df.at[idx, comment_col] = 'Same contact name appears with multiple PS IDs.'\n",
     "\n",
     "    return df\n"
    ]
