--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2329553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def enrich_billing_entity_info(main_df: pd.DataFrame, last_month_df: pd.DataFrame, ospd_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Normalize BPCC and LE_Description\n",
+    "    def normalize_bpcc(series):\n",
+    "        return series.astype(str).str.strip().str.lstrip('0').str.upper()\n",
+    "\n",
+    "    main_df['__BPCC_tmp'] = normalize_bpcc(main_df['Business Partner Cost Center'])\n",
+    "    last_month_df['__BPCC_tmp'] = normalize_bpcc(last_month_df['Business Partner Cost Center'])\n",
+    "    ospd_df['__BPCC_tmp'] = normalize_bpcc(ospd_df['CC_ID'])\n",
+    "    ospd_df['__LE_tmp'] = ospd_df['LE_Description'].astype(str).str.strip().str.upper()\n",
+    "\n",
+    "    # Ensure required columns\n",
+    "    if 'Comment' not in main_df.columns:\n",
+    "        main_df['Comment'] = \"\"\n",
+    "    if 'Billing Entity name as per OSPD' not in main_df.columns:\n",
+    "        main_df['Billing Entity name as per OSPD'] = \"\"\n",
+    "\n",
+    "    # Create sets for lookup\n",
+    "    bpcc_last_month_set = set(last_month_df['__BPCC_tmp'])\n",
+    "    bpcc_ospd_set = set(ospd_df['__BPCC_tmp'])\n",
+    "\n",
+    "    for idx, row in main_df.iterrows():\n",
+    "        bpcc = row['__BPCC_tmp']\n",
+    "\n",
+    "        # Skip if BPCC is NaN, empty, or IPAC\n",
+    "        if pd.isna(bpcc) or bpcc == \"\" or bpcc.upper() == \"IPAC\":\n",
+    "            continue\n",
+    "\n",
+    "        billing_entity = str(row['Billing Entity']).replace(\"_\", \" \").strip().upper()\n",
+    "\n",
+    "        # Case 1: BPCC not found in OSPD\n",
+    "        if bpcc not in bpcc_ospd_set:\n",
+    "            main_df.at[idx, 'Comment'] = \"No BPCC found in OSPD.\"\n",
+    "            continue\n",
+    "\n",
+    "        # Case 2: New BPCC (not in last month file)\n",
+    "        if bpcc not in bpcc_last_month_set:\n",
+    "            ospd_matches = ospd_df[ospd_df['__BPCC_tmp'] == bpcc]['__LE_tmp'].unique()\n",
+    "            combined_le = \" | \".join(sorted(set(ospd_matches)))\n",
+    "            main_df.at[idx, 'Billing Entity name as per OSPD'] = combined_le\n",
+    "\n",
+    "            if billing_entity not in ospd_matches:\n",
+    "                main_df.at[idx, 'Comment'] = f\"New BPCC found. Billing Entity mismatch. Expected from OSPD: {combined_le}\"\n",
+    "\n",
+    "    # Drop temporary column\n",
+    "    main_df.drop(columns=['__BPCC_tmp'], inplace=True)\n",
+    "    return main_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e58e9250",
    "metadata": {},
    "outputs": [],
