--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,52 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b530d09",
+   "id": "12eb1e7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def handle_new_bpccs(main_df, last_month_df, ospd_df):\n",
-    "    main_df = main_df.copy()\n",
+    "import pandas as pd\n",
     "\n",
-    "    # Normalize BPCC\n",
-    "    main_df[\"BPCC_temp\"] = main_df[\"Business Partner Cost Center\"].astype(str).str.strip().str.lstrip(\"0\").str.upper()\n",
-    "    last_month_df[\"BPCC_temp\"] = last_month_df[\"Business Partner Cost Center\"].astype(str).str.strip().str.lstrip(\"0\").str.upper()\n",
-    "    ospd_df[\"BPCC_temp\"] = ospd_df[\"CC_ID\"].astype(str).str.strip().str.lstrip(\"0\").str.upper()\n",
-    "    ospd_df[\"LE_Description_clean\"] = ospd_df[\"LE_Description\"].astype(str).str.replace(\"_\", \"\", regex=False).str.strip().str.upper()\n",
+    "def enrich_billing_entity_info(main_df: pd.DataFrame, last_month_df: pd.DataFrame, ospd_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Normalize BPCC and LE_Description\n",
+    "    def normalize_bpcc(series):\n",
+    "        return series.astype(str).str.strip().str.lstrip('0').str.upper()\n",
     "\n",
-    "    # Track comments\n",
-    "    if \"Comment\" not in main_df.columns:\n",
-    "        main_df[\"Comment\"] = \"\"\n",
+    "    main_df['__BPCC_tmp'] = normalize_bpcc(main_df['Business Partner Cost Center'])\n",
+    "    last_month_df['__BPCC_tmp'] = normalize_bpcc(last_month_df['Business Partner Cost Center'])\n",
+    "    ospd_df['__BPCC_tmp'] = normalize_bpcc(ospd_df['CC_ID'])\n",
     "\n",
-    "    # Add placeholder for OSPD name\n",
-    "    main_df[\"Billing Entity name as per OSPD\"] = \"\"\n",
+    "    # Normalize LE_Description\n",
+    "    ospd_df['__LE_tmp'] = ospd_df['LE_Description'].astype(str).str.strip().str.upper()\n",
+    "\n",
+    "    # Initialize columns\n",
+    "    if 'Comment' not in main_df.columns:\n",
+    "        main_df['Comment'] = \"\"\n",
+    "    main_df['Billing Entity name as per OSPD'] = \"\"\n",
+    "\n",
+    "    # Sets for lookup\n",
+    "    bpcc_last_month_set = set(last_month_df['__BPCC_tmp'])\n",
+    "    bpcc_ospd_set = set(ospd_df['__BPCC_tmp'])\n",
     "\n",
     "    for idx, row in main_df.iterrows():\n",
-    "        bpcc = row[\"BPCC_temp\"]\n",
-    "        billing_entity = str(row.get(\"Billing Entity\", \"\")).replace(\"_\", \"\").strip().upper()\n",
+    "        bpcc = row['__BPCC_tmp']\n",
     "\n",
-    "        # Skip blank, NaN, or IPAC\n",
-    "        if pd.isna(bpcc) or bpcc in [\"\", \"IPAC\"]:\n",
+    "        # Skip IPAC, NaN, or empty BPCC\n",
+    "        if pd.isna(bpcc) or bpcc == \"\" or bpcc == \"IPAC\":\n",
     "            continue\n",
     "\n",
-    "        # If BPCC is not found in last month file\n",
-    "        if bpcc not in last_month_df[\"BPCC_temp\"].values:\n",
-    "            # All OSPD entries matching the BPCC\n",
-    "            ospd_matches = ospd_df[ospd_df[\"BPCC_temp\"] == bpcc]\n",
+    "        billing_entity = str(row['Billing Entity']).replace(\"_\", \" \").strip().upper()\n",
     "\n",
-    "            if ospd_matches.empty:\n",
-    "                main_df.at[idx, \"Comment\"] = \"No BPCC found in OSPD\"\n",
-    "                continue\n",
+    "        # Case 1: BPCC not found in OSPD\n",
+    "        if bpcc not in bpcc_ospd_set:\n",
+    "            main_df.at[idx, 'Comment'] = \"No BPCC found in OSPD.\"\n",
+    "            continue\n",
     "\n",
-    "            all_entities = ospd_matches[\"LE_Description\"].dropna().unique()\n",
-    "            combined_entities = \" | \".join(all_entities)\n",
-    "            main_df.at[idx, \"Billing Entity name as per OSPD\"] = combined_entities\n",
+    "        # Case 2: New BPCC (not in last month file)\n",
+    "        if bpcc not in bpcc_last_month_set:\n",
+    "            matching_ospd_entries = ospd_df[ospd_df['__BPCC_tmp'] == bpcc]['__LE_tmp'].dropna().unique()\n",
+    "            combined_le = \" | \".join(sorted(set(matching_ospd_entries)))\n",
     "\n",
-    "            # Compare against current Billing Entity (cleaned)\n",
-    "            ospd_clean_names = ospd_matches[\"LE_Description_clean\"].unique()\n",
-    "            if billing_entity not in ospd_clean_names:\n",
-    "                main_df.at[idx, \"Comment\"] = f\"Mismatch in Billing Entity. Expected: {combined_entities}\"\n",
+    "            main_df.at[idx, 'Billing Entity name as per OSPD'] = combined_le\n",
     "\n",
+    "            # Compare with cleaned Billing Entity from main_df\n",
+    "            if billing_entity not in matching_ospd_entries:\n",
+    "                comment = f\"New BPCC found. Billing Entity mismatch. Expected from OSPD: {combined_le}\"\n",
+    "                main_df.at[idx, 'Comment'] = comment\n",
+    "\n",
+    "    # Cleanup temporary columns\n",
+    "    main_df.drop(columns=['__BPCC_tmp'], inplace=True)\n",
     "    return main_df\n"
    ]
   },
