--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12eb1e7b",
+   "id": "2e1ab2ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def round_two_decimals(value):\n",
+    "    \"\"\"Correctly round to 2 decimal places as per standard rounding logic.\"\"\"\n",
+    "    return round(value + 1e-8, 2)  # small epsilon to ensure correct rounding edge cases\n",
+    "\n",
+    "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Step 1: Filter for Billed (case-insensitive)\n",
+    "    billed_df = df[df['Category for Static'].astype(str).str.lower() == 'billed'].copy()\n",
+    "\n",
+    "    # Step 2: Compute Total FTE per AID\n",
+    "    total_fte_per_aid = billed_df.groupby('AID')['No. of FTE'].transform('sum')\n",
+    "    billed_df['Total FTE'] = total_fte_per_aid\n",
+    "\n",
+    "    # Step 3: Compute Raw % and rounded %\n",
+    "    billed_df['Raw Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
+    "    billed_df['Rounded Sum of %'] = billed_df['Raw Sum of %'].apply(round_two_decimals)\n",
+    "\n",
+    "    # Step 4: Group and aggregate\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'BPCC', 'Currency',\n",
+    "        'BC PSID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "\n",
+    "    pivot_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
+    "        'No. of FTE': 'sum',\n",
+    "        'Rounded Sum of %': 'sum'\n",
+    "    })\n",
+    "\n",
+    "    pivot_df.rename(columns={\n",
+    "        'No. of FTE': 'Sum of No. of FTE',\n",
+    "        'Rounded Sum of %': 'Rounded Sum of % Total'\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    # Step 5: Adjust Rounded Sum of % to make it total 100 per AID\n",
+    "    pivot_df['Final Sum of %'] = pivot_df['Rounded Sum of % Total']\n",
+    "    pivot_df['Adjustment'] = 0.0  # temp column to show adjustments\n",
+    "\n",
+    "    for aid, group in pivot_df.groupby('AID'):\n",
+    "        total = group['Rounded Sum of % Total'].sum()\n",
+    "        diff = round(100.00 - total, 2)\n",
+    "\n",
+    "        if abs(diff) > 0.01:  # if adjustment needed\n",
+    "            first_idx = group.index[0]\n",
+    "            pivot_df.loc[first_idx, 'Final Sum of %'] += diff\n",
+    "            pivot_df.loc[first_idx, 'Adjustment'] = diff\n",
+    "\n",
+    "    # Optional: Keep intermediate columns for validation\n",
+    "    return pivot_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fa62a2b",
    "metadata": {},
    "outputs": [],
    "source": [
