--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -8,55 +8,64 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
-    "def round_two_decimals(value):\n",
-    "    \"\"\"Correctly round to 2 decimal places as per standard rounding logic.\"\"\"\n",
-    "    return round(value + 1e-8, 2)  # small epsilon to ensure correct rounding edge cases\n",
+    "def round_half_up(number, decimals=2):\n",
+    "    \"\"\"Custom rounding function that behaves like Excel ROUND()\"\"\"\n",
+    "    factor = 10 ** decimals\n",
+    "    return float(int(number * factor + 0.5)) / factor\n",
     "\n",
     "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # Step 1: Filter for Billed (case-insensitive)\n",
-    "    billed_df = df[df['Category for Static'].astype(str).str.lower() == 'billed'].copy()\n",
+    "    # Step 1: Filter only 'Billed' category (case insensitive)\n",
+    "    billed_df = df[df['Category for Static'].astype(str).str.strip().str.lower() == 'billed'].copy()\n",
     "\n",
-    "    # Step 2: Compute Total FTE per AID\n",
-    "    total_fte_per_aid = billed_df.groupby('AID')['No. of FTE'].transform('sum')\n",
-    "    billed_df['Total FTE'] = total_fte_per_aid\n",
+    "    # Step 2: Calculate Total FTE per AID\n",
+    "    total_fte_per_aid = billed_df.groupby('AID')['No. of FTE'].sum().rename('Total FTE').reset_index()\n",
+    "    billed_df = billed_df.merge(total_fte_per_aid, on='AID', how='left')\n",
     "\n",
-    "    # Step 3: Compute Raw % and rounded %\n",
-    "    billed_df['Raw Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
-    "    billed_df['Rounded Sum of %'] = billed_df['Raw Sum of %'].apply(round_two_decimals)\n",
+    "    # Step 3: Calculate % per row\n",
+    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
     "\n",
-    "    # Step 4: Group and aggregate\n",
+    "    # Step 4: Round Sum of % to 2 decimals using custom rounding logic\n",
+    "    billed_df['Rounded Sum of %'] = billed_df['Sum of %'].apply(lambda x: round_half_up(x, 2))\n",
+    "\n",
+    "    # Step 5: Create final grouping with all required columns\n",
     "    group_cols = [\n",
     "        'AID', 'Billing Entity', 'BPCC', 'Currency',\n",
     "        'BC PSID', 'BP CC1', 'BP CC2'\n",
     "    ]\n",
-    "\n",
     "    pivot_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
     "        'No. of FTE': 'sum',\n",
     "        'Rounded Sum of %': 'sum'\n",
     "    })\n",
     "\n",
+    "    # Step 6: Round % again for consistency\n",
+    "    pivot_df['Rounded Sum of %'] = pivot_df['Rounded Sum of %'].apply(lambda x: round_half_up(x, 2))\n",
     "    pivot_df.rename(columns={\n",
     "        'No. of FTE': 'Sum of No. of FTE',\n",
-    "        'Rounded Sum of %': 'Rounded Sum of % Total'\n",
+    "        'Rounded Sum of %': 'Sum of % (Rounded)'\n",
     "    }, inplace=True)\n",
     "\n",
-    "    # Step 5: Adjust Rounded Sum of % to make it total 100 per AID\n",
-    "    pivot_df['Final Sum of %'] = pivot_df['Rounded Sum of % Total']\n",
-    "    pivot_df['Adjustment'] = 0.0  # temp column to show adjustments\n",
+    "    # Step 7: Adjust % to make total = 100 per AID\n",
+    "    pivot_df['Adjusted Sum of %'] = pivot_df['Sum of % (Rounded)']  # temp copy\n",
+    "    final_rows = []\n",
     "\n",
-    "    for aid, group in pivot_df.groupby('AID'):\n",
-    "        total = group['Rounded Sum of % Total'].sum()\n",
-    "        diff = round(100.00 - total, 2)\n",
+    "    for aid, aid_group in pivot_df.groupby('AID'):\n",
+    "        temp_df = aid_group.copy()\n",
+    "        sum_percent = temp_df['Sum of % (Rounded)'].sum()\n",
+    "        diff = round_half_up(100.0 - sum_percent, 2)\n",
     "\n",
-    "        if abs(diff) > 0.01:  # if adjustment needed\n",
-    "            first_idx = group.index[0]\n",
-    "            pivot_df.loc[first_idx, 'Final Sum of %'] += diff\n",
-    "            pivot_df.loc[first_idx, 'Adjustment'] = diff\n",
+    "        # Adjustment: add/subtract difference from first row of this AID\n",
+    "        if not temp_df.empty:\n",
+    "            temp_df.iloc[0, temp_df.columns.get_loc('Adjusted Sum of %')] += diff\n",
     "\n",
-    "    # Optional: Keep intermediate columns for validation\n",
-    "    return pivot_df\n"
+    "        final_rows.append(temp_df)\n",
+    "\n",
+    "    final_df = pd.concat(final_rows, ignore_index=True)\n",
+    "\n",
+    "    # Keep all intermediate columns for validation\n",
+    "    final_df['% Adjustment Done'] = final_df['Adjusted Sum of %'] - final_df['Sum of % (Rounded)']\n",
+    "\n",
+    "    return final_df\n"
    ]
   },
   {
