--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -9,63 +9,138 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def round_half_up(number, decimals=2):\n",
-    "    \"\"\"Custom rounding function that behaves like Excel ROUND()\"\"\"\n",
-    "    factor = 10 ** decimals\n",
-    "    return float(int(number * factor + 0.5)) / factor\n",
-    "\n",
-    "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # Step 1: Filter only 'Billed' category (case insensitive)\n",
+    "def calculate_billed_fte_percentage(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Filter only billed rows\n",
     "    billed_df = df[df['Category for Static'].astype(str).str.strip().str.lower() == 'billed'].copy()\n",
     "\n",
-    "    # Step 2: Calculate Total FTE per AID\n",
+    "    # Calculate Total FTE per AID\n",
     "    total_fte_per_aid = billed_df.groupby('AID')['No. of FTE'].sum().rename('Total FTE').reset_index()\n",
     "    billed_df = billed_df.merge(total_fte_per_aid, on='AID', how='left')\n",
     "\n",
-    "    # Step 3: Calculate % per row\n",
+    "    # Calculate unrounded percentage\n",
     "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
     "\n",
-    "    # Step 4: Round Sum of % to 2 decimals using custom rounding logic\n",
+    "    return billed_df\n",
+    "\n",
+    "def round_half_up(number, decimals=2):\n",
+    "    factor = 10 ** decimals\n",
+    "    return float(int(number * factor + 0.5)) / factor\n",
+    "\n",
+    "def aggregate_fte_summary(billed_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Business Contact PS ID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "\n",
     "    billed_df['Rounded Sum of %'] = billed_df['Sum of %'].apply(lambda x: round_half_up(x, 2))\n",
     "\n",
-    "    # Step 5: Create final grouping with all required columns\n",
-    "    group_cols = [\n",
-    "        'AID', 'Billing Entity', 'BPCC', 'Currency',\n",
-    "        'BC PSID', 'BP CC1', 'BP CC2'\n",
-    "    ]\n",
-    "    pivot_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
+    "    summary_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
     "        'No. of FTE': 'sum',\n",
     "        'Rounded Sum of %': 'sum'\n",
     "    })\n",
     "\n",
-    "    # Step 6: Round % again for consistency\n",
-    "    pivot_df['Rounded Sum of %'] = pivot_df['Rounded Sum of %'].apply(lambda x: round_half_up(x, 2))\n",
-    "    pivot_df.rename(columns={\n",
+    "    summary_df.rename(columns={\n",
     "        'No. of FTE': 'Sum of No. of FTE',\n",
-    "        'Rounded Sum of %': 'Sum of % (Rounded)'\n",
+    "        'Rounded Sum of %': 'Sum of %'\n",
     "    }, inplace=True)\n",
     "\n",
-    "    # Step 7: Adjust % to make total = 100 per AID\n",
-    "    pivot_df['Adjusted Sum of %'] = pivot_df['Sum of % (Rounded)']  # temp copy\n",
-    "    final_rows = []\n",
+    "    return summary_df\n",
     "\n",
-    "    for aid, aid_group in pivot_df.groupby('AID'):\n",
-    "        temp_df = aid_group.copy()\n",
-    "        sum_percent = temp_df['Sum of % (Rounded)'].sum()\n",
+    "def adjust_percentage_to_100(summary_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    final_rows = []\n",
+    "    for aid, group in summary_df.groupby('AID'):\n",
+    "        temp_df = group.copy()\n",
+    "        sum_percent = temp_df['Sum of %'].sum()\n",
     "        diff = round_half_up(100.0 - sum_percent, 2)\n",
     "\n",
-    "        # Adjustment: add/subtract difference from first row of this AID\n",
+    "        temp_df['Adjusted Sum of %'] = temp_df['Sum of %']\n",
     "        if not temp_df.empty:\n",
     "            temp_df.iloc[0, temp_df.columns.get_loc('Adjusted Sum of %')] += diff\n",
     "\n",
+    "        temp_df['% Adjustment Done'] = temp_df['Adjusted Sum of %'] - temp_df['Sum of %']\n",
     "        final_rows.append(temp_df)\n",
     "\n",
     "    final_df = pd.concat(final_rows, ignore_index=True)\n",
+    "    return final_df\n",
     "\n",
-    "    # Keep all intermediate columns for validation\n",
-    "    final_df['% Adjustment Done'] = final_df['Adjusted Sum of %'] - final_df['Sum of % (Rounded)']\n",
+    "# Usage Example:\n",
+    "# df = pd.read_excel(\"your_file.xlsx\")\n",
+    "# billed_df = calculate_billed_fte_percentage(df)\n",
+    "# summary_df = aggregate_fte_summary(billed_df)\n",
+    "# final_df = adjust_percentage_to_100(summary_df)\n",
+    "# print(final_df.head())\n",
+    "#option 2################\n",
     "\n",
-    "    return final_df\n"
+    "import pandas as pd\n",
+    "\n",
+    "def filter_billed_data(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Filters the DataFrame to include only rows where 'Category for Static' is 'Billed' (case-insensitive).\n",
+    "    \"\"\"\n",
+    "    return df[df['Category for Static'].astype(str).str.strip().str.lower() == 'billed'].copy()\n",
+    "\n",
+    "def calculate_percentage(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Adds Total FTE per AID and calculates the unrounded percentage (Sum of %) for each row.\n",
+    "    \"\"\"\n",
+    "    total_fte = df.groupby('AID')['No. of FTE'].sum().rename('Total FTE').reset_index()\n",
+    "    df = df.merge(total_fte, on='AID', how='left')\n",
+    "    df['Sum of % (Unrounded)'] = (df['No. of FTE'] / df['Total FTE']) * 100\n",
+    "    return df\n",
+    "\n",
+    "def aggregate_fte_data(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Groups data by the required columns and calculates sum of No. of FTE and Sum of % (Unrounded).\n",
+    "    \"\"\"\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Business Contact PS ID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "    agg_df = df.groupby(group_cols, as_index=False).agg({\n",
+    "        'No. of FTE': 'sum',\n",
+    "        'Sum of % (Unrounded)': 'sum'\n",
+    "    })\n",
+    "    return agg_df\n",
+    "\n",
+    "def round_half_up(number: float, decimals: int = 2) -> float:\n",
+    "    \"\"\"\n",
+    "    Custom rounding function: rounds to the nearest value using round-half-up rule (like Excel).\n",
+    "    \"\"\"\n",
+    "    factor = 10 ** decimals\n",
+    "    return float(int(number * factor + 0.5)) / factor\n",
+    "\n",
+    "def apply_rounding_and_adjustment(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Rounds Sum of % and adjusts first row per AID so total becomes exactly 100.\n",
+    "    \"\"\"\n",
+    "    df['Sum of % (Rounded)'] = df['Sum of % (Unrounded)'].apply(lambda x: round_half_up(x, 2))\n",
+    "    df['Adjusted Sum of %'] = df['Sum of % (Rounded)']  # Copy for final column\n",
+    "\n",
+    "    final_rows = []\n",
+    "    for aid, group in df.groupby('AID'):\n",
+    "        group = group.copy()\n",
+    "        total_rounded = group['Sum of % (Rounded)'].sum()\n",
+    "        diff = round_half_up(100.0 - total_rounded, 2)\n",
+    "\n",
+    "        if not group.empty:\n",
+    "            idx = group.index[0]\n",
+    "            group.at[idx, 'Adjusted Sum of %'] += diff\n",
+    "            group['% Adjustment Done'] = group['Adjusted Sum of %'] - group['Sum of % (Rounded)']\n",
+    "\n",
+    "        final_rows.append(group)\n",
+    "\n",
+    "    return pd.concat(final_rows, ignore_index=True)\n",
+    "\n",
+    "def process_fte_data(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Complete pipeline to filter, calculate percentage, aggregate, and adjust percentages.\n",
+    "    \"\"\"\n",
+    "    billed_df = filter_billed_data(df)\n",
+    "    billed_df = calculate_percentage(billed_df)\n",
+    "    aggregated_df = aggregate_fte_data(billed_df)\n",
+    "    final_df = apply_rounding_and_adjustment(aggregated_df)\n",
+    "    return final_df\n",
+    "\n"
    ]
   },
   {
